# uav_frontier_exploration_3d

./: .gitignore  CMakeLists.txt  Dockerfile.bionic  README.md  build_docker.sh  package.xml  run_docker.sh  start_docker.sh
config/: exploration.lua  kopterworx_config.yaml  kopterworx_exploration_sim_house.yaml  kopterworx_exploration_sim_large_env.yaml  vlp16-imu.urdf.xacro
include/uav_frontier_exploration_3d/: BestFrontier.h  ClusteringAlgorithm.h  FrontierServer.h  OctomapServer.h
launch/: 3D_cartographer.launch  execute_trajectory.launch  frontier_server.launch  planner.launch  robot_state_publisher.launch
models/car/: model.config
models/car/meshes/: car_mesh_1500.dae  rusted_car.dae
models/car/urdf/: rusted_car.urdf.xacro
models/container/: model.config
models/container/meshes/: container.dae  container_mesh_1000.dae
models/container/urdf/: container.urdf.xacro
models/old_building/: model.config
models/old_building/meshes/: building.dae
models/old_building/urdf/: old_building.urdf.xacro
models/tower/: model.config
models/tower/urdf/: mbzirc_tower.urdf.xacro  tower.urdf.xacro
models/tree/: model.config
models/tree/meshes/: tree_10k_mesh.dae  tree_25k_mesh.dae
models/tree/urdf/: tree.urdf.xacro
rviz/: cartographer_and_frontier.rviz  frontier.rviz
scripts/: execute_trajectory_state_machine.py
scripts/startup/: .gitignore  session.yml  session_without_slam.yml  start.sh
scripts/startup/custom_config/: apm_config.yaml  exploration.lua
src/: BestFrontier.cpp  FrontierServer.cpp  FrontierServerNode.cpp  OctomapServer.cpp
worlds/: borongaj.world  high_walls_and_grass.world  house.world  large1.world  large_environment.world  walls_and_grass.world
